# bio_tools

./: .gitignore  .pre-commit-config.yaml  404.html  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  SETUP.md  Taskfile.yml  commands.md  device_interfaces.json  gui.py  loader.py  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  serial_tools.py  sitemap.xml
.cursor/plans/: async-tools.plan.md  linting-and-type-checking-setup.plan.md  monorepo-package-split-c5ac1bd1.plan.md
.github/workflows/: ci.yml  lint.yml
api/: index.html
api/experiment/: index.html
api/experiment/actions/: index.html
api/experiment/experiment/: index.html
api/interfaces/: index.html
api/interfaces/pump/: index.html
api/interfaces/serial_connection/: index.html
api/interfaces/spectrophotometer/: index.html
api/tools/: index.html
docs/: experiment.md  index.md
docs/api/: index.md  tools.md
docs/api/experiment/: actions.md  experiment.md  index.md
docs/api/interfaces/: index.md  pump.md  serial_connection.md  spectrophotometer.md
docs/examples/: index.md
docs/interfaces/: index.md  pump.md  serial_connection.md  spectrophotometer.md
docs/superpowers/plans/: 2026-04-27-lab-devices-http-client.md  2026-05-04-labdevicesclient-username-discovery.md
docs/superpowers/specs/: 2026-04-27-lab-devices-http-client-design.md  2026-05-04-labdevicesclient-username-discovery-design.md
docs/tools/: devices.md  index.md  serial_port.md
examples/: README.md  experiment_example.ipynb  experiment_example.py  index.html  sample.env  three_pumps_experiment.py
experiment/: __init__.py  experiment.py
gui/: device_widgets.py  devices_tab.py  experiment.py  main.py  pump.py  store.py
interfaces/: __init__.py  pump.py  serial_connection.py  spectrophotometer.py
search/: search_index.json
src/bioexperiment_suite/: device_interfaces.json  settings.py
src/bioexperiment_suite/experiment/: __init__.py  conditional_actions.py  experiment.py  metrics.py
src/bioexperiment_suite/gui/: experiment_tab.py
src/bioexperiment_suite/interfaces/: __init__.py  densitometer.py  lab_devices_client.py  pump.py  serial_connection.py  spectrophotometer.py  valve.py
src/bioexperiment_suite/tools/: devices.py  serial_port.py
tests/: conftest.py  test_client_discovery.py  test_densitometer.py  test_discovery.py  test_exceptions.py  test_lab_devices_client.py  test_pump.py  test_valve.py
tools/: __init__.py  devices.py  serial_port.py
