[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff]
line-length = 120

[tool.poetry]
name = "bioexperiment-suite"
version = "0.5.0"
description = "Python toolbox for managing biological experiment devices via the lab_devices_client HTTP service."
license = "MIT"
authors = ["Denis Khamitov <hamitov.97@mail.ru>"]
readme = "README.md"
repository = "https://github.com/denis240997/bio_tools"
packages = [
    { include = "bioexperiment_suite", from = "src"},
]
include = [
    { path = "src/bioexperiment_suite/device_interfaces.json"},
    { path = "src/bioexperiment_suite/py.typed"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
loguru = "^0.7.2"
munch = "^4.0.0"
httpx = "^0.28"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
munch-stubs = "^0.1.2"
ruff = "^0.5.4"
notebook = "^7.3.1"
pyinstaller = "^6.9.0"
nbstripout = "^0.8.1"
pre-commit = "^4.0.1"
ipykernel = "^7.2.0"
pytest = "^8.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
